attribute assignment en cours